samples/_failures_safe/1761262682_cb765f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a516d054.c: In function ‘main’:
./samples/SAFE/__tmp_a516d054.c:161:9: error: expected declaration or statement at end of input
  161 |         printf("Error: Data mismatch after decompression\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a516d054.c:161:9: error: expected declaration or statement at end of input
